src/main/java/analysis/lang/language.bnf
program ::= declaration* EOF ;

declaration ::= filter_decl
                | statement ;

filter_decl ::= "@def" identifier ":"  (prediction | literal) ";"
statement ::= "@run" (prediction|literal)  ("->" identifier | string)? ";"

prediction ::= term (("||" term)*)

term ::= unary (("&&" unary)*)

unary ::= "!" unary
        | factor

factor ::= filter
          |  identifier
          | "(" prediction ")"

filter ::=  "filme" "(" method_pattern ")"
           | "filminp" "(" declaring_type_pattern ")"
           | "filmanno" "(" annotation_pattern ")"
           | "filminmapper" "(" ")"
           | "filmcanno" "(" annotation_pattern ")"

processor ::= "proc"

method_pattern ::= modifier_pattern? ret_type (declaring_type_pattern ".")? name_pattern "(" param_pattern? ")" throws_pattern?
modifier_pattern ::= "public" | "protected" | "private" | "pubstatic"
ret_type ::= "*" | qualified_name
declaring_type_pattern ::= identifier ( ("."|"..") (identifier|"*"))*
name_pattern ::= "*" | regex_identifier | identifier
param_pattern ::= type_pattern_list | ".."
throws_pattern ::= "throws"  qualified_name ("," qualified_name)*

type_pattern_list ::= qualified_name ("," qualified_name)*
annotation_pattern ::= qualified_name
qualified_name ::= identifier ("." identifier)*

regex_identifier ::= "[a-zA-Z_*][a-zA-Z0-9_*]*"
identifier ::= "[a-zA-Z_][a-zA-Z0-9_]*"
literal ::= string
string ::= ".*"
